--- a/SunShine.Web/Views/Parts/CaseListItemsScroll.cshtml
+++ b/SunShine.Web/Views/Parts/CaseListItemsScroll.cshtml
@@ -7,7 +7,7 @@
 @if (Model != null && Model.Count > 0)
 {
     <div class="scroll_case_list_box">
-        <div class="picture_center">
+        @*<div class="picture_center">
              @if (BrowerDetectorHelper.IsMobile()) {
                 <img class="scroll_case_list_header_img" src="~/Images/home/mobile_fuwubiaoyu_1.jpg" />
              }
@@ -16,7 +16,7 @@
              }
             
         </div>
-        <br />
+        <br />*@
         <div class="gundongbejing">
             <div class="gundongxiaoguo">
                 <ul>
