--- a/SunShine.Web/Views/Shared/_BookTitle.cshtml
+++ b/SunShine.Web/Views/Shared/_BookTitle.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 
-<div class="img_more_width">
+<div class="img_more_width book_title">
     @if (BrowerDetectorHelper.IsMobile()) {
         <img class="img" src="/Images/home/book_title.jpg" />
     }
