--- a/SunShine.Web/Views/Shared/_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Layout.cshtml
@@ -76,10 +76,10 @@
             <div class="tablist">
                 <ul>
                     <li><a href="@Url.Action("Index", "Home")">创意阳光首页</a></li>
-                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "bgwall" })">背景墙发光字</a></li>
-                    <li><a title="武汉门头发光字制作|招牌制作安装|发光字制作|定做门头招牌|户外招牌制作|武汉创意广告" href="@Url.Action("List", "Product", new { categoryCode = "door" })">门头发光字</a></li>
-                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "topfloor" })">楼顶发光字</a></li>
-                    <li><a href="@Url.RouteUrl("product_list")")">产品中心</a></li>
+                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "bgwall" })">营销型画册设计</a></li>
+                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "door" })">宣传画册设计</a></li>
+                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "topfloor" })">产品画册设计</a></li>
+                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "company_employ_desgin" })">员工手册设计</a></li>
                     <li><a href="@Url.Action("Index", "Case", new { categoryCode = "successcase" })">成功案例</a></li>
                     <li><a href="@Url.Action("Index", "Case", new { categoryCode = "sunshinebrand" })">品牌创意阳光</a></li>
                     <li><a href="@Url.Action("Index", "Case", new { categoryCode = "contactsunshine" })">关于创意阳光</a></li>
