--- a/SunShine.Web/Css/Bootstrap/home.css
+++ b/SunShine.Web/Css/Bootstrap/home.css
@@ -12,7 +12,7 @@
         padding-bottom: 0px;
         border-bottom: 1px solid #AEAEAE;
         background: #fff repeat-x;
-        text-align: center;
+        text-align: left;
     }
 
         #menu li.level1-li:hover {
@@ -46,13 +46,14 @@
     font-size: 15px;
     /*color: #7e7f81;
             font-weight: bold;*/
-    text-align: center;
+    text-align: left;
     padding-top: 2px;
     font-family: "Microsoft YaHei";
     font-weight: 400;
     /*text-align:center;*/
     /* background: url("../images/linedot.gif") repeat-x left bottom;*/
     margin: 0 auto;
+    padding-left: 10px;
 }
 
 #menu li.level2-li a.level2-a {
@@ -883,23 +884,27 @@ ul.thirdLevel {
     .friend_link_box .friend_link_title {
         color: #E15517;
         font-size: 26px;
-        width: 130px;
         height: 70px;
         float: left;
         font-weight: bold;
+        margin-right:20px;
     }
 
-    .friend_link_box .friend_link {
-        float: left;
-        width: 180px;
-        padding-top: 5px;
-        padding-bottom: 10px;
-    }
+.friend_link_title img {
+    height: 40px;
+}
 
-        .friend_link_box .friend_link a {
-            font-size: 16px;
-            line-height: 20px;
-        }
+.friend_link_box .friend_link {
+    float: left;
+    width: 180px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
+    .friend_link_box .friend_link a {
+        font-size: 16px;
+        line-height: 20px;
+    }
 
 .site_bottom_bg {
     width: 100%;
@@ -1137,8 +1142,9 @@ ul.thirdLevel {
     }
 
 .gundongbejing {
-    background: url(../../Images/home/hezuo_1.jpg) no-repeat;
+    background-color:#E15517;
     height: 181px;
+    border-bottom:10px solid #363533;
 }
 
 .gundongxiaoguo {
@@ -1343,7 +1349,7 @@ a {
 .scroll_case_list_box {
     width: 1444px;
     margin: 0px auto;
-        margin-top: 30px;
+    margin-top: 30px;
 }
 
 .yongxinzuofuwu {
@@ -1425,7 +1431,7 @@ ul.advance_item_content_box {
     width: 100%;
     text-align: center;
     padding: 30px 0;
-    margin-top:20px;
+    margin-top: 20px;
 }
 
 .design_compare {
@@ -1433,14 +1439,14 @@ ul.advance_item_content_box {
     text-align: center;
     padding: 30px 0;
     background-color: #F3F3F3;
-    margin-top:20px;
+    margin-top: 20px;
 }
 
 .advantages_box {
     width: 100%;
     text-align: center;
     padding: 20px 0;
-    margin-top:20px;
+    margin-top: 20px;
 }
 
 .core_advance_box {
@@ -1500,7 +1506,7 @@ ul.advance_item_content_box {
 .img_middle_width {
     width: 1000px;
     margin: 0 auto;
-    margin-top:30px;
+    margin-top: 30px;
 }
 
     .img_middle_width .img {
@@ -1512,8 +1518,8 @@ ul.advance_item_content_box {
     margin: 0 auto;
     text-align: center;
     margin: 0 auto;
-    margin-top:20px;
-    padding:20px 0;
+    margin-top: 20px;
+    padding: 20px 0;
 }
 
     .design_service_box .service_title {
@@ -1541,16 +1547,16 @@ ul.advance_item_content_box {
 
 .service_item .service_item_bottom {
     width: 100%;
-    opacity: 0.35;
-    filter: alpha(opacity=35);
-    height: 30px;
-    border: #c9c9c9 solid 1px;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+    padding: 8px 0;
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: #c9c9c9;
+    background-color: #000000;
     z-index: 1000;
     color: #FFFFFF;
+    font-size: 16px;
 }
 
 .site_bottom_hot_phone {
@@ -1581,6 +1587,7 @@ ul.advance_item_content_box {
     color: #FFFFFF;
     font-size: 28px;
 }
+
 .book_title {
-    margin-top:30px;
+    margin-top: 30px;
 }
