--- a/SunShine.Web/Views/Parts/CoreAdvance.cshtml
+++ b/SunShine.Web/Views/Parts/CoreAdvance.cshtml
@@ -13,16 +13,16 @@
         <div class="core_advance_box_title">
             <img src="~/Images/home/coreadvance.jpg" />
         </div>
-        <div class="core_advance_box_part">
+        <div class="core_advance_box_part1">
             <div class="part_left">
-                <img src="~/Images/home/core_advance_title_img_1.jpg" />
+                <img src="~/Images/home/core_advance_title_1_2.jpg" />
             </div>
             <div class="part_right">
-                <img src="~/Images/home/core_advance_title_1_2.jpg" />
+                <img src="~/Images/home/core_advance_title_img_1.jpg" />
             </div>
             <div style="clear:both;"></div>
         </div>
-        <div class="core_advance_box_part">
+        <div class="core_advance_box_part2">
             <div class="part_left">
                 <img src="~/Images/home/core_advance_title_img_2.jpg" />
             </div>
