--- a/SunShine.Web/Views/Shared/_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Layout.cshtml
@@ -49,85 +49,89 @@
 
     @*<script src="http://stat.xiaonaodai.com/stat.php?id=11192140" language="JavaScript" type="text/javascript"></script>*@
 
-        <div class="header hidden-xs">
-            <div class="top">
-                <div class="welcome">您好，欢迎来到创意阳光广告有限公司官方网站</div>
-                <span> <a href="javascript:AddFavorite('创意阳光',location.href)">收藏本站</a>&nbsp;&nbsp;|<a href="@Url.Action("SiteMap","Home")">网站地图</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="@Url.Action("Index", "Case", new { categoryCode = "news", currentCategoryCode = "commonquestion" })">常见问题</a>&nbsp; &nbsp;|&nbsp;&nbsp;<a href="@Url.Action("Index", "Case", new { categoryCode = "contactsunshine", currentCategoryCode = "contactus" })">联系我们</a>&nbsp; &nbsp;</span>
-            </div>
-            <div style="clear:both"></div>
+    <div class="header hidden-xs">
+        <div class="top">
+            <div class="welcome">您好，欢迎来到创意阳光广告有限公司官方网站</div>
+            <span> <a href="javascript:AddFavorite('创意阳光',location.href)">收藏本站</a>&nbsp;&nbsp;|<a href="@Url.Action("SiteMap","Home")">网站地图</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="@Url.Action("Index", "Case", new { categoryCode = "news", currentCategoryCode = "commonquestion" })">常见问题</a>&nbsp; &nbsp;|&nbsp;&nbsp;<a href="@Url.Action("Index", "Case", new { categoryCode = "contactsunshine", currentCategoryCode = "contactus" })">联系我们</a>&nbsp; &nbsp;</span>
         </div>
-        <div style="width:1400px;height:1px;margin:0px auto"><hr /></div>
+        <div style="clear:both"></div>
+    </div>
+    <div style="width:1400px;height:1px;margin:0px auto"><hr /></div>
 
 
-        <div class="center">
-            <div class="logo">
-                <a href="@Url.Action("Index", "Home")">  <img src="~/Images/home/fgz_05.jpg" width="690" height="116" />    </a>
-            </div>
-            <div class="telephonenumber">
-
-            </div>
-            <div style="clear:both"></div>
+    <div class="center">
+        <div class="logo">
+            <a href="@Url.Action("Index", "Home")">  <img src="~/Images/home/fgz_05.jpg" />    </a>
         </div>
-
-     
-
-
-        <div class="tablist1" id="pro_list1">
-            <div class="tablist">
-                <ul>
-                    <li><a href="@Url.Action("Index", "Home")">创意阳光首页</a></li>
-                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "marketing_design" })">营销型画册设计</a></li>
-                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "brochure_design" })">宣传画册设计</a></li>
-                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "product_desgin" })">产品画册设计</a></li>
-                    <li><a href="@Url.Action("List", "Product", new { categoryCode = "company_employ_desgin" })">员工手册设计</a></li>
-                    <li><a href="@Url.Action("Index", "Case", new { categoryCode = "successcase" })">成功案例</a></li>
-                    <li><a href="@Url.Action("Index", "Case", new { categoryCode = "news" })">新闻资讯</a></li>
-                    <li><a href="@Url.Action("Index", "Case", new { categoryCode = "contactsunshine" })">联系创意阳光</a></li>
-                </ul>
-            </div>
+        <div class="telephonenumber_icon">
+            <img src="~/Images/home/fgz_06.jpg" /> 
         </div>
-      <div style="clear:both"></div>
+        <div class="telephonenumber">
+            <div class="telephonenumber_item">4008-778-652</div>
+            <div class="telephonenumber_item">156 7156 6365</div>
+        </div>
+        <div style="clear:both"></div>
+    </div>
+
+
+
+
+    <div class="tablist1" id="pro_list1">
+        <div class="tablist">
+            <ul>
+                <li><a href="@Url.Action("Index", "Home")">创意阳光首页</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "marketing_design" })">营销型画册设计</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "brochure_design" })">宣传画册设计</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "product_desgin" })">产品画册设计</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "company_employ_desgin" })">员工手册设计</a></li>
+                <li><a href="@Url.Action("Index", "Case", new { categoryCode = "successcase" })">成功案例</a></li>
+                <li><a href="@Url.Action("Index", "Case", new { categoryCode = "news" })">新闻资讯</a></li>
+                <li><a href="@Url.Action("Index", "Case", new { categoryCode = "contactsunshine" })">联系创意阳光</a></li>
+            </ul>
+        </div>
+    </div>
+    <div style="clear:both"></div>
+    @{
+        Html.RenderAction("HomeAdvertise", "Parts");
+    }
+
+    <div class="search">
         @{
-            Html.RenderAction("HomeAdvertise", "Parts");
+            Html.RenderAction("HotSearch", "Parts");
         }
 
-        <div class="search">
+        <div class="ss">
+            <form id="form1" action="@Url.Action("List","Product")">
+                <input name="keyword" type="text" id="txtSearch" class="input" value="@Request["keyword"]" />
+                <span>
+                    <input type="image" name="btnSeach" id="btnSeach" src="~/Images/home/fgz_11.gif" style="border-width:0px;width:34px; height:33px; padding:0" />
+                </span>
+            </form>
+        </div>
+    </div>
+    @RenderBody()
+    @{ Html.RenderAction("BottomProductCategory", "Parts");}
+
+    @{
+        Html.RenderAction("FriendURL", "Parts");
+    }
+    <div class="honor_box">
+        <div class="honor_top">
+            <img src="~/Images/home/honor.jpg" />
+        </div>
+
+    </div>
+    <div class="site_bottom_bg">
+        <div class="site_bottom">
+            <div class="site_bottom_left">
+                <img src="~/Images/home/bottom_logo.jpg" style="width:190px" />
+            </div>
             @{
-                Html.RenderAction("HotSearch", "Parts");
+                Html.RenderAction("BottomWebsiteInfo", "Parts");
             }
-            
-            <div class="ss">
-                <form id="form1" action="@Url.Action("List","Product")">
-                    <input name="keyword" type="text" id="txtSearch" class="input" value="@Request["keyword"]" />
-                    <span>
-                        <input type="image" name="btnSeach" id="btnSeach" src="~/Images/home/fgz_11.gif" style="border-width:0px;width:34px; height:33px; padding:0" />
-                    </span>
-                </form>
-            </div>
         </div>
-        @RenderBody()
-        @{ Html.RenderAction("BottomProductCategory", "Parts");}
 
-        @{
-            Html.RenderAction("FriendURL", "Parts");
-        }
-        <div class="honor_box">
-            <div class="honor_top">
-                <img src="~/Images/home/honor.jpg" />
-            </div>
-            
-        </div>
-        <div class="site_bottom_bg">
-            <div class="site_bottom">
-                <div class="site_bottom_left">
-                    <img src="~/Images/home/bottom_logo.jpg" style="width:190px" />
-                </div>
-                @{
-                    Html.RenderAction("BottomWebsiteInfo", "Parts");
-                }
-            </div>
-
-        </div>
+    </div>
 
     <div style="width:100%;height:50px;background:#383D41"></div>
 
