--- a/SunShine.Web/Css/Bootstrap/style.css
+++ b/SunShine.Web/Css/Bootstrap/style.css
@@ -536,14 +536,14 @@ hr {
 
             .cp_list1 ul li .cp_bottom {
                 width:100%;
-                opacity: 0.5;
-                filter: alpha(opacity=50);
+                opacity: 0.6;
+                filter: alpha(opacity=60);
                 height: 50px;
-                border: #c9c9c9 solid 1px;
+                border: #000000 solid 1px;
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                background-color:#c9c9c9;
+                background-color:#000000;
                 z-index:1000;
             }
 
@@ -632,6 +632,7 @@ hr {
                 width: 230px;
                 height: 160px;
                 overflow: hidden;
+                position:relative;
             }
 
                 .zhanshitupian ul li .cp_img a img {
