--- a/SunShine.Web/Views/Shared/_ProductItemPartial1.cshtml
+++ b/SunShine.Web/Views/Shared/_ProductItemPartial1.cshtml
@@ -16,15 +16,17 @@
                 @foreach (var item in Model)
                 {
                     <li  @Html.Raw((i+1)%2==1?"style='clear:both;'":"")>
-                        <div class="cp_img"><a href="@Url.Action("List","Product",new { idproduct=item.idproduct})" title="@item.name"><img src="@Url.Content(item.img)" onload="DrawImage(this,357,247)" alt="@item.name" /></a></div>
-                        <div class="cp_bottom">
-                            <div class="cp_name"><a href="@Url.Action("List","Product",new { idproduct=item.idproduct})">@item.name</a></div>
-                            @if (!BrowerDetectorHelper.IsMobile())
-                            {
+                        <div class="cp_img">
+                            <a href="@Url.Action("List","Product",new { idproduct=item.idproduct})" title="@item.name"><img src="@Url.Content(item.img)" onload="DrawImage(this,357,247)" alt="@item.name" /></a>
+                            <div class="cp_bottom">
+                                <div class="cp_name"><a href="@Url.Action("List","Product",new { idproduct=item.idproduct})">@item.name</a></div>
+                                @if (!BrowerDetectorHelper.IsMobile())
+                                {
                                     <div class="ckxq_ljzx"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3317300173&site=qq&menu=yes">立即咨询</a></div>
-                            }
-
+                                }
+                            </div>
                         </div>
+                       
                         
                         
                     </li>
