--- a/SunShine.Web/jsor-jcarousel/extra/jcarousel.responsive.css
+++ b/SunShine.Web/jsor-jcarousel/extra/jcarousel.responsive.css
@@ -1,11 +1,11 @@
 .jcarousel-wrapper {
-    margin: 20px auto;
+    margin: 0 auto;
     position: relative;
     width: 1444px;
     float: left;
     background-color: #E15517;
-    border-bottom: 10px solid #383431;
-    height:240px;
+    border-bottom: 6px solid #383431;
+    height: 190px;
 }
 
 /** Carousel **/
@@ -16,8 +16,8 @@
     width: 1000px;
     float: left;
     margin-left: 60px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 17px;
+    /* margin-bottom: 15px; */
 }
 
     .jcarousel ul {
